addlogs &  metrics