@@ -1,33 +1,41 @@
 package com.brutecx.docflow_backend.domain.audit.export;
 
+import com.brutecx.docflow_backend.audit.metrics.AuditWriteFailureMetrics;
 import com.brutecx.docflow_backend.domain.audit.forensic.DigestingForensicExportService;
-import com.brutecx.docflow_backend.domain.security.ExportSigningService;
+import com.brutecx.docflow_backend.domain.security.auditSigningKeys.signing.ExportSigningService;
+import net.logstash.logback.argument.StructuredArgument;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.slf4j.MDC;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 
-import java.io.BufferedOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
+import java.io.*;
+import java.nio.file.*;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.Signature;
+import java.time.Duration;
 import java.time.Instant;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
+
+import static net.logstash.logback.argument.StructuredArguments.kv;
 
 @Service
 public class SealedJsonlAuditExportFileService {
+
+    private static final Logger log =
+            LoggerFactory.getLogger("SECURITY_AUDIT");
+
+    private static final String STREAM = "AUDIT_RETENTION_EXPORT";
+    private static final String EXEC_CTX = "SYSTEM";
 
     private final JdbcTemplate jdbcTemplate;
     private final DigestingForensicExportService digestService;
     private final ExportSigningService signingService;
     private final AuditExportSnapshotRepository snapshotRepository;
+    private final AuditWriteFailureMetrics metrics;
 
     private final Path exportDir;
 
@@ -36,12 +44,15 @@ public class SealedJsonlAuditExportFileService {
             DigestingForensicExportService digestService,
             ExportSigningService signingService,
             AuditExportSnapshotRepository snapshotRepository,
-            @Value("${docflow.audit.retention.export-dir:/var/lib/docflow/audit-retention}") String exportDir
+            AuditWriteFailureMetrics metrics,
+            @Value("${docflow.audit.retention.export-dir:/var/lib/docflow/audit-retention}")
+            String exportDir
     ) {
         this.jdbcTemplate = jdbcTemplate;
         this.digestService = digestService;
         this.signingService = signingService;
         this.snapshotRepository = snapshotRepository;
+        this.metrics = metrics;
         this.exportDir = Path.of(exportDir);
     }
 
@@ -51,55 +62,59 @@ public class SealedJsonlAuditExportFileService {
             List<UUID> ids,
             UUID systemUserId
     ) {
-        if (ids.isEmpty()) {
-            throw new IllegalArgumentException("ids required");
-        }
+
+        final long startNs = System.nanoTime();
+        String correlationId = Optional.ofNullable(MDC.get("correlationId"))
+                .orElse("retention-" + UUID.randomUUID());
 
         try {
-            Files.createDirectories(exportDir);
 
+            if (ids.isEmpty()) {
+                throw new IllegalArgumentException("ids required");
+            }
+
+            Files.createDirectories(exportDir);
             Path tmp = Files.createTempFile(exportDir, "retention-", ".jsonl.tmp");
 
-            ExportSigningService.PayloadSigner signer = signingService.beginPayloadSigner();
+            ExportSigningService.PayloadSigner signer =
+                    signingService.beginPayloadSigner();
+
             Signature signature = signer.signature();
 
-            try (OutputStream out = new BufferedOutputStream(Files.newOutputStream(tmp))) {
+            List<Map<String, Object>> rows =
+                    jdbcTemplate.queryForList(
+                            "SELECT * FROM " + tableName +
+                                    " WHERE id = ANY (?) ORDER BY timestamp ASC, id ASC",
+                            ids.toArray()
+                    );
+
+            if (rows.size() != ids.size()) {
+                throw new IllegalStateException("Retention export row mismatch");
+            }
+
+            try (OutputStream out =
+                         new BufferedOutputStream(Files.newOutputStream(tmp))) {
 
                 var ctx = digestService.beginDigestStream(out, signature);
-
-                List<Map<String, Object>> rows =
-                        jdbcTemplate.queryForList(
-                                "SELECT * FROM " + tableName + " WHERE id = ANY (?) ORDER BY timestamp ASC, id ASC",
-                                ids.toArray()
-                        );
-
-                if (rows.size() != ids.size()) {
-                    throw new IllegalStateException(
-                            "Retention export row mismatch expected=" + ids.size() +
-                                    " actual=" + rows.size()
-                    );
-                }
-
-                if (rows.isEmpty()) {
-                    throw new IllegalStateException("Retention export returned no rows");
-                }
 
                 for (Map<String, Object> row : rows) {
                     digestService.writePayloadJsonl(row, ctx);
                 }
 
                 byte[] digestBytes = ctx.finalizePayloadDigest();
-                String digestHex = DigestingForensicExportService.hexSha256(digestBytes);
+                String digestHex =
+                        DigestingForensicExportService.hexSha256(digestBytes);
 
-                ExportSigningService.SignatureResult sigResult = signer.finish();
+                ExportSigningService.SignatureResult sigResult =
+                        signer.finish();
 
                 Instant now = Instant.now();
 
                 AuditExportSnapshot snapshot =
                         new AuditExportSnapshot(
                                 streamName,
-                                (Instant) rows.get(0).get("timestamp"),
-                                (Instant) rows.get(rows.size() - 1).get("timestamp"),
+                                (Instant) rows.getFirst().get("timestamp"),
+                                (Instant) rows.getLast().get("timestamp"),
                                 null,
                                 digestHex,
                                 rows.size(),
@@ -127,9 +142,8 @@ public class SealedJsonlAuditExportFileService {
 
                 ctx.flush();
 
-                Path finalPath = exportDir.resolve(
-                        streamName + "-" + snapshot.getId() + ".jsonl"
-                );
+                Path finalPath =
+                        exportDir.resolve(streamName + "-" + snapshot.getId() + ".jsonl");
 
                 Files.move(
                         tmp,
@@ -138,10 +152,27 @@ public class SealedJsonlAuditExportFileService {
                         StandardCopyOption.REPLACE_EXISTING
                 );
 
-                // Re-validate artifact AFTER move:
-                // - recompute SHA-256 over payload bytes
-                // - verify signature over payload bytes
-                validateArtifact(finalPath, digestHex, sigResult.signatureB64(), sigResult.algorithm(), sigResult.keyId());
+                validateArtifact(
+                        finalPath,
+                        digestHex,
+                        sigResult.signatureB64(),
+                        sigResult.algorithm(),
+                        sigResult.keyId()
+                );
+
+                emitLog(
+                        true,
+                        correlationId,
+                        snapshot.getId(),
+                        streamName,
+                        rows.size(),
+                        digestHex,
+                        sigResult.keyId()
+                );
+
+                metrics.incrementSuccess(STREAM, EXEC_CTX);
+                metrics.recordLatency(STREAM, EXEC_CTX,
+                        Duration.ofNanos(System.nanoTime() - startNs));
 
                 return new ExportResult(
                         snapshot.getId(),
@@ -150,12 +181,59 @@ public class SealedJsonlAuditExportFileService {
                         digestHex,
                         sigResult.keyId()
                 );
-            } catch (NoSuchAlgorithmException e) {
-                throw new RuntimeException(e);
             }
 
-        } catch (IOException e) {
+        } catch (Exception e) {
+
+            emitLog(false, correlationId, null,
+                    streamName, ids.size(), null, null,
+                    kv("exception.class", e.getClass().getSimpleName()));
+
+            metrics.incrementFailure(STREAM, EXEC_CTX, e);
+            metrics.recordLatency(STREAM, EXEC_CTX,
+                    Duration.ofNanos(System.nanoTime() - startNs));
+
             throw new IllegalStateException("Retention export failed", e);
+        }
+    }
+
+    private static void emitLog(
+            boolean ok,
+            String correlationId,
+            UUID snapshotId,
+            String stream,
+            long rowCount,
+            String digestHex,
+            String keyId,
+            StructuredArgument... extra
+    ) {
+
+        StructuredArgument[] base = new StructuredArgument[]{
+                kv("event.category", "audit"),
+                kv("event.action", "RETENTION_EXPORT"),
+                kv("event.outcome", ok ? "success" : "failure"),
+                kv("audit.stream", STREAM),
+                kv("correlation.id", correlationId),
+                kv("snapshot.id", snapshotId),
+                kv("snapshot.stream", stream),
+                kv("row.count", rowCount),
+                kv("digest.sha256", digestHex),
+                kv("key.id", keyId)
+        };
+
+        StructuredArgument[] args =
+                extra != null && extra.length > 0
+                        ? Arrays.copyOf(base, base.length + extra.length)
+                        : base;
+
+        if (extra != null && extra.length > 0) {
+            System.arraycopy(extra, 0, args, base.length, extra.length);
+        }
+
+        if (ok) {
+            log.info("security_event {}", (Object[]) args);
+        } else {
+            log.error("security_event {}", (Object[]) args);
         }
     }
 
@@ -166,12 +244,7 @@ public class SealedJsonlAuditExportFileService {
             String signatureAlg,
             String keyId
     ) throws IOException, NoSuchAlgorithmException {
-        long fileSize = Files.size(file);
-        if (fileSize <= 0) {
-            throw new IllegalStateException("Retention artifact empty");
-        }
 
-        // determine payload length (fileSize minus last line)
         long payloadLen = determinePayloadLength(file);
 
         MessageDigest md = MessageDigest.getInstance("SHA-256");
@@ -179,51 +252,39 @@ public class SealedJsonlAuditExportFileService {
         try (InputStream in = Files.newInputStream(file)) {
             byte[] buf = new byte[64 * 1024];
             long remaining = payloadLen;
-
             while (remaining > 0) {
                 int r = in.read(buf, 0, (int) Math.min(buf.length, remaining));
-                if (r == -1) break;
                 md.update(buf, 0, r);
                 remaining -= r;
             }
+        }
 
-            if (remaining != 0) {
-                throw new IllegalStateException("Retention artifact shorter than expected");
-            }
+        String actualDigestHex =
+                DigestingForensicExportService.hexSha256(md.digest());
 
-            String actualDigestHex =
-                    DigestingForensicExportService.hexSha256(md.digest());
-
-            if (!expectedDigestHex.equalsIgnoreCase(actualDigestHex)) {
-                throw new IllegalStateException(
-                        "Retention artifact digest mismatch expected=" +
-                                expectedDigestHex + " actual=" + actualDigestHex
-                );
-            }
+        if (!expectedDigestHex.equalsIgnoreCase(actualDigestHex)) {
+            throw new IllegalStateException("Retention digest mismatch");
         }
 
         try (InputStream in = Files.newInputStream(file)) {
-            boolean sigOk = signingService.verifyPayloadSignatureStream(
-                    in,
-                    payloadLen,
-                    signatureB64,
-                    signatureAlg,
-                    keyId
-            );
+            boolean sigOk =
+                    signingService.verifyPayloadSignatureStream(
+                            in,
+                            payloadLen,
+                            signatureB64,
+                            signatureAlg,
+                            keyId
+                    );
 
             if (!sigOk) {
-                throw new IllegalStateException("Retention artifact signature verification failed");
+                throw new IllegalStateException("Retention signature invalid");
             }
         }
     }
 
     private long determinePayloadLength(Path file) throws IOException {
-        try (var raf = new java.io.RandomAccessFile(file.toFile(), "r")) {
+        try (RandomAccessFile raf = new RandomAccessFile(file.toFile(), "r")) {
             long length = raf.length();
-            if (length <= 1) {
-                throw new IllegalStateException("Invalid JSONL artifact");
-            }
-
             long pos = length - 1;
             int newlineCount = 0;
 
@@ -237,16 +298,8 @@ public class SealedJsonlAuditExportFileService {
                 }
                 pos--;
             }
-
             throw new IllegalStateException("Invalid JSONL structure");
         }
-    }
-
-    private static int lastIndexOf(byte[] a, byte b, int from) {
-        for (int i = Math.min(from, a.length - 1); i >= 0; i--) {
-            if (a[i] == b) return i;
-        }
-        return -1;
     }
 
     public record ExportResult(
