@@ -5,29 +5,42 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Component;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
 /**
- * Utility component to extract and filter roles from an Authentication object.
- * Converts roles to uppercase and removes Keycloak-specific noise roles.
- * Used by controllers and other components to get a clean list of user roles.
+ * Utility component to extract and normalize application roles
+ * from a Spring Security Authentication.
+ * - Keeps only ROLE_ authorities
+ * - Strips ROLE_ prefix
+ * - Removes Keycloak noise roles
+ * - Normalizes to uppercase
+ * - Returns deterministic ordering
+ * This class is intentionally side-effect free:
+ * - No logging
+ * - No metrics
+ * - No audit emission
  */
 @Component
 public class AuthRoleExtractor {
 
     public List<String> extractRoles(Authentication authentication) {
+
         if (authentication == null) {
-            return Collections.emptyList();
+            return List.of();
         }
 
-        return authentication.getAuthorities().stream()
+        Collection<? extends GrantedAuthority> authorities =
+                authentication.getAuthorities();
+
+        if (authorities == null || authorities.isEmpty()) {
+            return List.of();
+        }
+
+        return authorities.stream()
                 .map(GrantedAuthority::getAuthority)
-                // only keep ROLE_ authorities
                 .filter(a -> a != null && a.startsWith("ROLE_"))
                 .map(a -> a.substring("ROLE_".length()))
-                // remove Keycloak noise roles
                 .filter(role -> !role.startsWith("default-roles-"))
                 .filter(role -> !role.equalsIgnoreCase("uma_authorization"))
                 .filter(role -> !role.equalsIgnoreCase("offline_access"))
@@ -37,12 +50,14 @@ public class AuthRoleExtractor {
     }
 
     public List<String> filterRealmRoles(Collection<String> roles) {
-        if (roles == null) {
+
+        if (roles == null || roles.isEmpty()) {
             return List.of();
         }
 
         return roles.stream()
-                .map(String::toUpperCase)
+                .filter(role -> role != null && !role.isBlank())
+                .map(role -> role.toUpperCase(Locale.ROOT))
                 .filter(role -> !role.startsWith("DEFAULT-ROLES-"))
                 .filter(role -> !role.equals("OFFLINE_ACCESS"))
                 .filter(role -> !role.equals("UMA_AUTHORIZATION"))
